# HsIRCb

./: .gitignore  .gitmodules  Gamble.hs  HsIRCb.cabal  HsIRCb.hs  LICENSE  Main.hs  README.md  TinyURL.hs  URLShortener.hs
Src/: HsIRCb.hs  Main.hs
Src/Modules/: BTCInfo.hs  Gamble.hs  URLShortener.hs
