name:           HsIRCb
version:        0.0.1
license:        BSD3
license-file:   LICENSE
author:         Christian Kjaer Laustsen
maintainer:     Christian Kjaer Laustsen
synopsis:       A Haskell IRC bot
description:    A simple and extensible Haskell IRC bot
stability:      Experimental
cabal-version:  >= 1.8
build-type:     Simple

library
    exposed-modules: HsIRCb
                     HsIRCParser.HsIRCParser
                     Gamble
                     URLShortener
    build-depends:   base >= 3 && < 5
                     , mtl
                     , old-time
                     , network
                     , random
                     , HTTP
executable HsIRCb
    main-is:        Main.hs
    build-depends:  base
                    , HsIRCb
                    , mtl
                    , old-time
                    , network
                    , random
                    , HTTP
