name:           HsIRCb
version:        0.0.1
license:        BSD3
license-file:   LICENSE
author:         Christian Kjaer Laustsen
maintainer:     Christian Kjaer Laustsen
synopsis:       A Haskell IRC bot
description:    A simple and extensible Haskell IRC bot
stability:      Experimental
cabal-version:  >= 1.8
build-type:     Simple

Extra-Source-Files:
    README.md LICENSE

Library
    build-depends:   base >= 3 && < 5
                     , mtl
                     , old-time
                     , network
                     , random
                     , HTTP
                     , bytestring
                     , aeson
    Exposed-Modules: Src.HsIRCb
                     HsIRCParser.HsIRCParser
                     Src.Modules.Gamble
                     Src.Modules.URLShortener
                     Src.Modules.BTCInfo
                     
Executable HsIRCb
    main-is:        Src/Main.hs
    build-depends:  base
                    , mtl
                    , old-time
                    , network
                    , random
                    , HTTP
                    , bytestring
                    , aeson
